<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="15dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:padding="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:text="@string/login_page"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        android:typeface="monospace" />
    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:hint="@string/email"
        android:textSize="25sp"
        android:autofillHints="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:hint="@string/password"
        android:textSize="25sp"
        android:autofillHints="@string/password"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:paddingEnd="15dp"
        app:backgroundTint="#ff781f"/>
    <TextView
        android:id="@+id/registerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:text="@string/not_got_an_account_click_here_to_register"
        android:textColor="@color/purple_700"
        android:textSize="25sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textColor="@color/black"
        android:textSize="25sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:text="@string/forgot_password_click_here_and_follow_the_steps"
        android:textColor="@color/purple_700"
        android:textSize="25sp" />
    </LinearLayout>
</ScrollView>