<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:text="@string/user_profile"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="35sp"

            android:textStyle="bold"
            android:typeface="monospace" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="Email: "
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email"
                android:hint="@string/email"
                android:paddingRight="15dp"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="Name: "
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/name"
                android:paddingRight="15dp"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="Age: "
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/profile_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:paddingRight="15dp"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="Gender: "
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/profile_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Gender"
                android:hint="@string/gender"
                android:paddingRight="15dp"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:paddingLeft="15dp"
                android:text="Current Weight: "
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/profile_current_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="Current weight"
                android:paddingRight="15dp"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="Target Weight: "
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/profile_target_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Target weight"
                android:paddingRight="15dp"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

        <Button
            android:id="@+id/profile_edit"

            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/rounded_button"
            android:text="Edit"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:backgroundTint="#ff781f"
            android:layout_marginTop="24dp"/>

    </LinearLayout>
</ScrollView>
